brain/sources/prod-metadata/objects/StepTemplate__c/StepTemplate__c.object-meta.xml
<CustomObject>
    <label>Step Template</label>
    <nameField>
        <displayFormat>ST-{0000}</displayFormat>
        <label>Step Template Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Step Templates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>