brain/sources/prod-metadata/objects/StepTemplate__c/fields/Expected_Duration_Min__c.field-meta.xml
<CustomField>
    <fullName>Expected_Duration_Min__c</fullName>
    <label>Expected Duration Min</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>