brain/sources/prod-metadata/objects/StepTemplate__c/fields/Program__c.field-meta.xml
<CustomField>
    <fullName>Program__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Program</label>
    <referenceTo>Program__c</referenceTo>
    <relationshipLabel>Step Templates</relationshipLabel>
    <relationshipName>StepTemplates</relationshipName>
    <type>Lookup</type>
</CustomField>