brain/sources/prod-metadata/objects/StepTemplate__c/fields/Program_Version__c.field-meta.xml
<CustomField>
    <fullName>Program_Version__c</fullName>
    <label>Program Version</label>
    <referenceTo>Program_Version__c</referenceTo>
    <relationshipLabel>Step Templates</relationshipLabel>
    <relationshipName>StepTemplates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>