brain/sources/prod-metadata/objects/StepTemplate__c/fields/Tags__c.field-meta.xml
<CustomField>
    <fullName>Tags__c</fullName>
    <label>Tags</label>
    <length>200</length>
    <type>Text</type>
</CustomField>