brain/sources/prod-metadata/objects/StepTemplate__c/fields/Title__c.field-meta.xml
<CustomField>
    <fullName>Title__c</fullName>
    <label>Title</label>
    <length>200</length>
    <required>true</required>
    <type>Text</type>
</CustomField>