brain/sources/prod-metadata/objects/StepTemplate__c/fields/Training_Method__c.field-meta.xml
<CustomField>
    <fullName>Training_Method__c</fullName>
    <label>Training Notes</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>