brain/sources/prod-metadata/objects/StepTemplate__c/fields/Triggers_Mock__c.field-meta.xml
<CustomField>
    <fullName>Triggers_Mock__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When true and the parent Program Version has Mock_Frequency = &quot;Custom (After Specific Steps)&quot;, a Mock Interview is scheduled after this step completes for the candidate. Ignored under other Mock_Frequency values.</description>
    <label>Triggers Mock</label>
    <type>Checkbox</type>
</CustomField>